--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FleetDynamics</string>
+    <string name="button1">Button</string>
+    <string name="button">Button</string>
+    <string name="todo">TODO</string>
 </resources>
