--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="button1">Button</string>
     <string name="button">Button</string>
     <string name="todo">TODO</string>
+    <string name="clear">clear</string>
+    <string name="save">save</string>
 </resources>
