--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="todo">TODO</string>
     <string name="clear">clear</string>
     <string name="save">save</string>
+    <string name="cancel">cancel</string>
 </resources>
