--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="clear">clear</string>
     <string name="save">save</string>
     <string name="cancel">cancel</string>
+    <string name="signature">Signature</string>
 </resources>
