--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="clear">clear</string>
     <string name="save">save</string>
     <string name="cancel">cancel</string>
-    <string name="navigation_drawer_open"></string>
+    <string name="navigation_drawer_open"> Open navigation drawer</string>
+    <string name="navigation_drawer_close"> Close navigation drawer</string>
 </resources>
