--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="cancel">cancel</string>
     <string name="navigation_drawer_open"> Open navigation drawer</string>
     <string name="navigation_drawer_close"> Close navigation drawer</string>
-
     <string name="signature">Signature</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="openMap" translatable="false">Map</string>
 </resources>
